2020-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Import module update-copyright.
	* gnulib: Update submodule reference to latest master.

2019-06-23  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/csv2rec.c (recutl_print_help): Spelling fix: ommited ->
	omitted.
	* man/csv2rec.1: Regenerated.
	Reported by Sven Wick.

2019-02-04  Brandon Invergo  <brandon@invergo.net>

	* utils/rec2csv.c (DELIM_ARG): New long option.
	(rec2csv_parse_args): Use DELIM_ARG and put RECORD_TYPE_ARG in the
	right place.

2019-01-07  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Top): Spurious menu header "Remote
	Descriptors" removed.

2019-01-03  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* configure.ac: Bump version to 1.8.
	* NEWS: Likewise.

2018-05-31  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi (Bash Builtins): Note that some systems
	require the full path to the bash builtin shared object.

2018-03-19  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 1.7.91.
	* NEWS: Likewise.

2018-03-19  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Use the signal-h module to
	guarantee a GNU-like signal.h.

2018-03-18  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* utils/recutl.c (PATH_MAX): handle systems where it is not
	defined such as GNU/Hurd.

2018-03-18  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* src/rec-aggregate.c (REC_AGGREGATE_ACCUM_FUNC): Use %g instead
	of %zd to print the result of aggregate functions.
	* torture/utils/recsel.sh: Adjust expected result.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* bash/readrec.c (readrec_builtin): Immediately return EX_USAGE if
	no_options returns != 0.  Fixes readrec --help.

2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* utils/recutl.c (recutl_print_version): Update copyright years.
	* bash/readrec.c: Include config.h.
	* bash/Makefile.am (COMMON_CPPFLAGS): Include the builddir lib.