@@ -26,7 +26,8 @@ gnulib_modules="
   c-ctype extensions fwriting getdelim localcharset mbrlen
   mbrtowc mbsinit memchr mkostemp obstack pathmax regex rename selinux-h stdbool
   stat-macros ssize_t strerror strverscmp threadlib unlocked-io verify
-  version-etc-fsf wcrtomb wctob tmpdir pathmax signal-h update-copyright"
+  version-etc-fsf wcrtomb wctob tmpdir pathmax signal-h update-copyright copy-file
+  remove"
 
 checkout_only_file=
 MSGID_BUGS_ADDRESS=bug-gnu-utils@gnu.org
